<resources>
    <string name="app_name">Kmong Clone</string>
    <string name="app_access_guide">크몽 앱 접근 권한 안내</string>
    <string name="necessary_access_rights">필수 접근 권한</string>
    <string name="selective_access_rights">선택적 접근 권한</string>
    <string name="storage_access">저장 공간\n파일첨부 또는 파일 저장을 위해 사용</string>
    <string name="push_notification">푸시 알림\n앱에서 알림을 보내기 위해 사용</string>
    <string name="access_rights_note">*선택적 접근 권한은 해당 기능의 실행 시 동의 여부를 선택할 수 있으며, 동의하지 않아도 정상적인 앱 사용이 가능합니다.</string>
    <string name="confirm">확인</string>
</resources>